--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 'Stay hungry, stay foolish'
 description: ''
 keywords:
 author: bifnudo
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
