--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: false
   tab_replace: ''
   wrap: true
@@ -61,8 +61,8 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 
 # index_generator:
-#   path: archives
-#   per_page: 20
+#   path: 
+#   per_page: 10
 #   order_by: -date
 
 # Category & Tag
