--- a/_config.next.yml
+++ b/_config.next.yml
@@ -448,8 +448,8 @@ font:
   # Font settings for site title (.site-title).
   title:
     external: true
-    family:
-    size:
+    family: Agbalumo
+    size: 1.5
 
   # Font settings for headlines (<h1> to <h6>).
   headings:
