--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "co": "^4.6.0",
     "hexo": "^6.3.0",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-tag": "^2.0.0",
