--- a/_config.next.yml
+++ b/_config.next.yml
@@ -542,6 +542,9 @@ mermaid:
   theme:
     light: default
     dark: dark
+  config:
+    flowchart:
+      curve: basis
 
 # WaveDrom tag
 wavedrom:
